#                                                                              #
#                ===== PLEASE DO NOT DELETE THIS HEADER ====                   #
################################################################################
          1         2         3         4         5         6         7
01234567890123456789012345678901234567890123456789012345678901234567890123456789
RH-2012-03-15-2:  Enhancem.   Misc. cleanup

RH-2012-03-15-1:  Enhancem.   Cygwin cleanup

RH-2012-03-15-0:  Enhancem.   sge_edit cleanup

RH-2012-03-12-0:  Enhancem.   aimk cleanup

RH-2012-02-15-0:  Enhancem.:  - cleanup inst_sge
                              - added -sys-jemalloc

RH-2012-01-21-1:  Bugfix:     lx -> linux in arch

RH-2012-01-21-0:  Enhancem.   64-bit OSX port + OSX cleanup

RH-2011-11-21-1:  Enhancem.   add -y option to auto-accept prompts
                  From:       Justin Riley (with some minor changes by RH)

RH-2011-11-21-0:  Enhancem.   set JAVA_LIB_ARCH to i386 if -32 flag was passed
                  From:       Justin Riley

RH-2011-11-19-0:  Bugfix:     Exported bash functions causes erroneous
                              "environment" file
                  Issue:      2173

RH-2011-11-16-1:  Enhancem.   Cygwin port - Part 1

-------------------------------------------------------------------------------

RH-2011-11-16-0:  SVN:        Grid Engine 2011.11

RH-2011-11-14-1:  Enhancem.   manpage update

RH-2011-11-13-6:  Bugfix:     Minor fix for Hadoop setup.pl (from Kevin Squire)

RH-2011-11-13-5:  Enhancem.   version string GE 2011.11

RH-2011-11-13-4:  Enhancem.   import new qmon icons (from Alain Champenois)

RH-2011-11-13-3:  Enhancem.   delete old qmon icons

RH-2011-11-13-2:  Enhancem.   import hwloc-1.2.2

RH-2011-11-13-1:  Enhancem.   Solaris build changes

RH-2011-11-13-0:  Enhancem.   Better support for hwloc-1.3

RH-2011-11-09-1:  Enhancem.   Transform gmake -> qmake

RH-2011-11-09-0:  Enhancem.   Berkeley DB spooling enhancement
