@@ -5,6 +5,8 @@
 ################################################################################
           1         2         3         4         5         6         7
 01234567890123456789012345678901234567890123456789012345678901234567890123456789
+RH-2012-03-16-0:  Enhancem.   Set $PATH in bdb_checkpoint.sh
+
 RH-2012-03-15-2:  Enhancem.   Misc. cleanup
 
 RH-2012-03-15-1:  Enhancem.   Cygwin cleanup
